--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,7 +10,7 @@ body {
 }
 
 .container {
-  margin: auto;
+  margin: 40px auto;
   width: 60%;
 }
 
@@ -181,8 +181,34 @@ header {
 /* footer */
 
 footer {
+  width: 100%;
+  padding: 4px;
   background-color: rgb(254, 254, 254);
-  height: 150px;
+  color: lightgrey;
   border-radius: 6px;
-  margin-bottom: 40px;
+}
+
+.footer-top {
+  text-align: center;
+  border-bottom: 1px inset lightgrey;
+}
+
+footer .footer-bottom::after {
+  content: '';
+  display: table;
+  clear: both;
+}
+footer .footer-bottom .footer-col {
+  float: left;
+  width: calc(100% / 3);
+  text-align: center;
+  padding: 30px;
+  font-size: 40px;
+}
+
+footer .footer-bottom .footer-col a {
+  color: lightgrey;
+}
+footer .footer-bottom .footer-col a:hover {
+  color: grey;
 }
